--- a/src/views/What/What.css
+++ b/src/views/What/What.css
@@ -24,6 +24,7 @@
     position: absolute;
     left: -25%;
     top: 145%;
+    z-index: -1;
     content: url('./../../assets/bg-tablet-pattern.svg');
   }
   
